[package]
name = "plier"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-crypto = "0.2.36"
uuid = { version = "1.8.0", features = ["v4"] }
fred = { version = "9.0.3" }
tokio = "1.38.0"
lazy_static = "1.4.0"
log = "0.4.21"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
google-authenticator = "0.4.2"
